fix header on mobile

--- a/src/header.css
+++ b/src/header.css
@@ -19,7 +19,7 @@
 @media (max-width: 390px) {
 
     .marquee {
-        width: 100%;
+        column-width: 390px;
         margin-top: 20px;
         margin-bottom: 20px;
         animation: marquee 5s infinite linear;
@@ -28,8 +28,6 @@
         color: black;
         text-decoration: none;
         text-transform: capitalize;
-        white-space: nowrap;
-        overflow: hidden;
     }
 }
 
@@ -37,7 +35,7 @@
     0% {
         transform: translateX(0);
     }
-100% {
+    100% {
         transform: translateX(-100%);
     }
 }
